@@ -22,5 +22,7 @@
 2020-08-12 Last change reversed for problems with interchanging users will solve thirst before changing again.
 2020-08-12 catering.py problem solved with switching clients so again implemented free tableseats under conditions
            orderlines / no orderlines
-           
+2020-08-12 catering.py info.screen changed to plaintextedit for scrolling. Also the explanation of table 
+           arrangements added.
+          
 
